--- a/frontend/style.css
+++ b/frontend/style.css
@@ -140,7 +140,7 @@ h1 {
     border: 1px solid black;
     border-radius: 5px;
     margin-bottom: 10px;
-    height: 350px;
+    min-height: 350px;
     box-sizing:border-box;
     position: relative;
 }
