--- a/frontend/style.css
+++ b/frontend/style.css
@@ -161,6 +161,12 @@ h1 {
     font-weight: 600;
 }
 
+.hotel-status {
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: justify;
+}
+
 a {
     color: #000 !important;
 }
